pallet_kitties 添加到 rumtme 会出错的

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,4 @@
 [workspace]
-members = [
-    "node",
-    "pallets/template",
-    "pallets/kitties",
-    "runtime",
-]
+members = ["node", "pallets/template", "pallets/kitties", "runtime"]
 [profile.release]
 panic = "unwind"
