--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -53,6 +53,7 @@ frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, g
 
 # Local Dependencies
 pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }
+pallet-poe = { version = "4.0.0-dev", default-features = false, path = "../pallets/poe" }
 pallet-kitties = { version = "4.0.0-dev", default-features = false, path = "../pallets/kitties" }
 # getrandom 解决 getrandom 编译出错问题
 getrandom = { version = "0.2.9", default-features = false, features = ["js"] }
@@ -80,6 +81,7 @@ std = [
 	"pallet-grandpa/std",
 	"pallet-sudo/std",
 	"pallet-template/std",
+	"pallet-poe/std",
 	"pallet-kitties/std",
 	"pallet-timestamp/std",
 	"pallet-transaction-payment-rpc-runtime-api/std",
@@ -106,6 +108,7 @@ runtime-benchmarks = [
 	"pallet-balances/runtime-benchmarks",
 	"pallet-grandpa/runtime-benchmarks",
 	"pallet-template/runtime-benchmarks",
+	"pallet-poe/runtime-benchmarks",
 	"pallet-kitties/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
